# sentiment-analysis-movie-review

./: .dockerignore  .gitignore  Dockerfile  README.md  index.html  pyproject.toml  requirements.txt  train.py  utils.py
.github/workflows/: train.yml
app/: main.py  routes.py  schemas.py  state.py
docs/: model-register-workflow.md
scripts/: pipeline.py  predict.py  train_mlflow.py
