[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sentiment-analysis-movie-review"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "nltk",
    "matplotlib",
    "seaborn",
    "fastapi",
    "uvicorn",
    "pydantic",
]
